# Trading_Bot

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_STATUS.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  NewKnowledgeBase.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_REVIEW.md  REFACTORING_SUMMARY.md  USER_GUIDE.md  abidance.db  abidance_main.py  analyze_data.py  bot  check_database.py  config.yaml  config.yaml.example  convert_tests_to_pytest.py  create_fix_all_tests.py  fetch_historical_data.py  fix_all_tests.py  fix_data_manager_test.py  fix_indent.py  fix_indentation.py  fix_remaining_tests.py  fix_sma_crossover_test.py  fix_strategy_executor_test.py  fix_test.py  fix_test2.py  fix_test_data_manager.py  fix_test_exchange.py  fix_test_strategy_executor.py  init_database.py  list_test_files.py  main.py  migrate_files.py  project_rules.md  pylint_detailed_report.txt  (+18 more)
.cursor/rules/: my-bot-project-rules.mdc
Trading_Bot/: __init__.py  __main__.py  backtest.py  data_manager.py  exceptions.py  exchange.py  main.py  strategy_executor.py
Trading_Bot/config/: __init__.py  exceptions.py  settings.py
Trading_Bot/core/: __init__.py  bot.py  config.py  main.py  strategy_executor.py
Trading_Bot/exchanges/: __init__.py  base.py  binance.py  exceptions.py
Trading_Bot/risk/: __init__.py  exceptions.py  manager.py  position_sizer.py
Trading_Bot/strategies/: __init__.py  base.py  exceptions.py  prompt.md  registry.py  rsi_bollinger.py  sma_crossover.py  sma_strategy.py  tradingview_adapter.py
Trading_Bot/tests/: __init__.py  (+5 more)
abidance/: __init__.py
bot/: __init__.py  data_manager.py  exchange.py  strategy_executor.py
config/: settings.py
frontend/: README.md  package-lock.json  package.json
reports/: ADAUSDT_1h_data.csv  ADAUSDT_1h_summary.txt  XRPUSDT_1h_data.csv  XRPUSDT_1h_summary.txt
tests/: README.md  conftest.py  pytest_test_sma_crossover.py  test_data_manager.py  test_exchange.py  test_position_sizer.py  test_rsi_bollinger.py  test_sma_crossover.py  test_strategy_executor.py
(+196 files in other folders)
